--- a/public/index.html
+++ b/public/index.html
@@ -137,10 +137,10 @@
       var data = [{
           type: 'choropleth',
           locationmode: 'country names',
-          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Columbia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia","Mexico","Netherlands","Norway","New Zealand","Peru","Poland","Portual","Romania","Russia","Slovakia","Slovenia","Sweden","Turkey","United States","South Africa"],
-          z: [11,7.9,14.4,18.2,10.9,5.6,11.3,12.3,12.3,7,7.2,13.9,11.2,10.1,7,16.2,17.6,16.3,6.7,7,16.9,24.3,10.8,15,7.5,7,21.7,25,25,10.5,20.1,4.9,9.4,11.4,12.4,6,16.3,9.7,12.8,22.8,11.6,19.2,12,6.1,12.8,6.1],
-          zmax: 26,
-          zmin: 6,
+          locations: ["Argentina","Australia","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Colombia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia","Mexico","Netherlands","Norway","New Zealand","Peru","Poland","Portugal","Romania","Russia","Slovakia","Slovenia","Sweden","Turkey","United States","South Africa"],
+          z: [7.9,11,14.4,18.2,10.9,5.6,11.3,12.3,12.3,5,7.2,13.9,11.2,10.1,6.5,16.2,17.6,16.3,6.7,3.2,16.9,24.3,10.8,15,7.5,6,21.7,35,32.2,10.5,20.1,4.9,9.4,11.4,12.4,1,16.3,9.7,12.8,22.8,11.6,19.2,12,2.4,12.8,1],
+          zmax: 35,
+          zmin: 1,
           autocolorscale: true
       }];
       var layout = {
